--- a/package.json
+++ b/package.json
@@ -4,8 +4,81 @@
   "description": "A Simple MEAN.js Todo Application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ng": "ng",
+    "start": "concurrently \"npm run start:client\" \"npm run start:server\"",
+    "start:client": "echo \"******Staring Angular CLI******\" && ng serve",
+    "start:server": "echo \"******Staring Server******\" && nodemon server/server.js",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
-  "author": "",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/samyajithm/meanTodo.git"
+  },
+  "keywords": [
+    "MongoDb",
+    "Express.js",
+    "Angular",
+    "Node"
+  ],
+  "author": "Samyajith M",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/samyajithm/meanTodo/issues"
+  },
+  "homepage": "https://github.com/samyajithm/meanTodo#readme",
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "~8.2.14",
+    "@angular/cdk": "~8.2.3",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/forms": "~8.2.14",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/router": "~8.2.14",
+    "@ngx-translate/core": "^12.1.2",
+    "@ngx-translate/http-loader": "^4.0.0",
+    "angular-cli-ghpages": "^0.6.2",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.22",
+    "mongoose-sequence": "^5.2.2",
+    "mongoose-unique-validator": "^2.0.3",
+    "morgan": "^1.10.0",
+    "ngx-toastr": "^11.3.3",
+    "rxjs": "~6.4.0",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.9.1"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.803.27",
+    "@angular/cli": "~8.3.27",
+    "@angular/compiler-cli": "~8.2.14",
+    "@angular/language-service": "~8.2.14",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "^5.0.0",
+    "concurrently": "^5.2.0",
+    "jasmine-core": "^3.5.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "^5.1.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "nodemon": "^2.0.4",
+    "protractor": "~7.0.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.15.0",
+    "typescript": "~3.5.3"
+  }
 }
